# robstride-humanoid-5.5ft-full-body-lipm-mediapipe

./: .gitignore
RobStride_Control_update/cpp/: CMakeLists.txt  motor_log.csv
RobStride_Control_update/cpp/examples/: COMPLETE_FILE_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SINUSOIDAL_TEST_README.md  START_HERE.md  bode.md  build_sinusoidal_test.sh  compare_models.py  estimate_damping.py  estimate_inertia.py  example_sinusoidal_workflow.sh  export_Meff.py  hello_motor.cpp  motor_gui.cpp  multi_motor_functionality.cpp  pd_gain_designer.py  plot_bode.py  plot_sinusoidal_test.py  plot_step_response.py  rs04_sysid_results.md  sinusoidal_actuator_test  sinusoidal_actuator_test.cpp  sysid_fit.py  sysid_fit_loaded.py
RobStride_Control_update/cpp/include/: can_interfaces.h  env_agent.hpp  motor_control.hpp  motor_env.hpp  ppo_agent.hpp  protocol_completed.h  td3_agent.hpp
RobStride_Control_update/cpp/src/: can_interfaces.cpp  multi_motor_position.cpp  my_Test.cpp  ppo.cpp  td3_train.cpp
RobStride_Control_update/python/src/: multi-motor.py  serial_testing.py  test.py
RobStride_Control_update/rust/src/: lib.rs
src/: CHANGELOG.md  Demo.md  MUJOCO_LOG.TXT  frames_2026-05-13_14.23.50.gv  frames_2026-05-13_15.03.50.gv
src/Angad_Full_Assembly_description/: dcm_controller.py  foot_trajectory.py  ik_solver.py  lipm_model.py  main_walking_node.py  step_planner.py  trajectory_publisher.py
src/XP_robot/: MUJOCO_LOG.TXT  XP_robot_lower_body.xml  XP_robot_upb.xml  XP_robot_upper_body.xml  XP_robot_with_actuators.xml  XP_robot_with_limits.xml  add_actuators.py  pd_control.py
src/XP_robot/XP_robot_with_actuator/: XP_robot_floor.urdf  XP_robot_pelvis.urdf
src/XP_robot/meshes/: L_index_pip_link.stl  L_middle_mcp_link.stl  L_palm.stl  L_pinky_mcp_link.stl  L_pinky_pip_link.stl  L_ring_dip_link.stl  L_ring_mcp_link.stl  L_thumb_ip_link.stl  L_thumb_yaw_link.stl  R_index_dip_link.stl  R_index_mcp_link.stl  R_middle_dip_link.stl  R_middle_mcp_link.stl  R_palm.stl  R_pinky_dip_link.stl  R_pinky_mcp_link.stl  R_ring_pip_link.stl  R_thumb_yaw_link.stl  bicep_l.stl  bicep_r.stl  foot_r.stl  forearm_l.stl  hip_pitch_l.stl  hip_roll_r.stl  leg_shank_l.stl  pelvis.stl  shoulder_pitch_l.stl  shoulder_roll_l.stl  thigh_l.stl  torso.stl  uj_l.stl
src/XP_robot_with_hand_mjcf/: XP_robot.xml  XP_robot_with_actuators.xml  add_actuators.py
src/XP_robot_with_hand_mjcf/meshes/: L_index_dip_link.stl  L_index_mcp_link.stl  L_middle_dip_link.stl  L_middle_pip_link.stl  L_pinky_dip_link.stl  L_ring_pip_link.stl  L_thumb_cmc_link.stl  L_thumb_mcp_link.stl  R_index_pip_link.stl  R_middle_pip_link.stl  R_pinky_pip_link.stl  R_ring_dip_link.stl  R_ring_mcp_link.stl  R_thumb_cmc_link.stl  R_thumb_ip_link.stl  R_thumb_mcp_link.stl  bicep_l.stl  bicep_r.stl  foot_r.stl  forearm_r.stl  hip_pitch_l.stl  hip_roll_r.stl  leg_shank_l.stl  pelvis.stl  shoulder_pitch_r.stl  shoulder_roll_r.stl  thigh_r.stl  (+2 more)
src/XP_robot_with_hand_urdf/: XP_robot.urdf
src/angad_moveit_upper_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/full_body_fake_hardware/: CMakeLists.txt  package.xml
src/full_body_fake_hardware/config/: display.rviz  full_body_controllers.yaml
src/full_body_fake_hardware/launch/: full_body_fake_hardware.launch.py
src/full_body_fake_hardware/urdf/: full_body.ros2_control.xacro  full_body.xacro
src/full_body_hardware/: CMakeLists.txt  full_body_hardware_plugins.xml  package.xml  robstride_system_plugins.xml
src/full_body_hardware_leg/: CMakeLists.txt  README.md  full_body_hardware_plugins.xml  package.xml  robstride_system_plugins.xml
src/full_body_hardware_leg/config/: angad_full_body.xml  full_body_controllers.yaml
src/full_body_hardware_leg/include/full_body_hardware/: robstride_system.hpp
src/full_body_hardware_leg/launch/: full_body_hardware.launch.py
src/full_body_hardware_leg/msg/: FootSensor.msg  FootSensorArray.msg
src/full_body_hardware_leg/src/: can_interfaces.cpp  fake_system.cpp  robstride_system.cpp
src/full_body_hardware_leg/urdf/: full_body.ros2_control.xacro  full_body.xacro
src/full_body_moveit/: CMakeLists.txt  package.xml
src/full_body_moveit/config/: angad_full_body.srdf  full_body.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/full_body_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py
src/full_body_moveit_hardware/: CMakeLists.txt  package.xml
src/full_body_moveit_scripts/: CMakeLists.txt  package.xml
src/full_body_moveit_scripts/launch/: mediapipe.launch.py
src/full_body_moveit_scripts/src/: mediapipe_node.cpp  namaste.py
src/full_body_mujoco/: CMakeLists.txt  CMakeLists.txt.bak  README.md  mocap_marker_plugin.xml  package.xml
src/full_body_mujoco/config/: angad_full_body.xml  full_body_controllers.yaml  lipm_walker_params.yaml  mujoco_plugins.yaml
src/full_body_mujoco/launch/: full_body_mujoco.launch.py  full_body_mujoco_viewer.launch.py
src/full_body_mujoco/scripts/: backup.cpp  foot_force_array_publisher.py  foot_force_array_publisher_custom.py  hold_standing_pose.py  ik_mujoco_viewer.cpp  ik_sphere_viz.py  kajita_walker.cpp  kbot.urdf  lipm_fk.cpp  lipm_walker.cpp  mujoco_ik_markers.py  mujoco_marker_sync.py  mujoco_marker_viz.py  nr_ik_test.cpp  simple_ik_viz.py  update_mocap_cubes.py  zmp_control.cpp  zmp_control_dcm.cpp
src/full_body_mujoco/src/: mocap_marker_plugin.cpp
src/full_body_mujoco/urdf/: full_body.ros2_control.xacro  full_body.urdf  full_body.xacro
src/upper_body_mujoco/: CMakeLists.txt  package.xml
src/upper_body_mujoco/config/: upper_body_joint_trajectory_params.yaml  upper_body_mujoco_controllers.yaml  upper_body_xp.xml
src/upper_body_mujoco/launch/: mujoco.launch.py  sim_planning.launch.py
src/upper_body_mujoco/urdf/: upper_body.mujoco.ros2_control.xacro
src/upper_moveit_scripts/: CMakeLists.txt  package.xml
src/upper_moveit_scripts/launch/: moveit_input.launch.py  moveit_scripts.launch.py  set_goal_pose.launch.py
src/upper_moveit_scripts/src/: gesture.cpp  mediapipe_input.cpp  mediapipe_node.cpp  set_goal_pose.cpp
(+88 files in other folders)
