<?xml version="1.0"?>
<package format="3">
    <name>full_body_hardware_leg</name>
    <version>0.0.1</version>
    <description>Full-body (upper + lower) MuJoCo simulation with ros2_control</description>
    <maintainer email="regvith@xprobotics.ai">me</maintainer>
    <license>Apache-2.0</license>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rclcpp</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>rclcpp</exec_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>