<?xml version="1.0"?>
<package format="3">
    <name>full_body_mujoco</name>
    <version>0.0.1</version>
    <description>Full-body (upper + lower) MuJoCo simulation with ros2_control</description>
    <maintainer email="regvith@xprobotics.ai">me</maintainer>
    <license>Apache-2.0</license>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>mujoco_ros2_control</exec_depend>
    <exec_depend>upper_body</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <depend>pinocchio</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>urdf</depend>
    <depend>visualization_msgs</depend>
    <depend>pluginlib</depend>
    <depend>mujoco_ros2_control_plugins</depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>